--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap');
+
 html {
     scroll-behavior: smooth;
+    font-family: 'Zen Kaku Gothic Antique', sans-serif;
 }
 
 body {
@@ -8,7 +11,6 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    /* font-family: ;  TODO: Set font*/
 }
 
 /* ▼ header ▼ */
@@ -40,15 +42,29 @@ header nav ul li {
 header nav ul li a {
     color: white;
     text-shadow: 0 2.5px #191919;
-    text-decoration: none;
     font-size: 16px;
+    text-decoration: none;
     transition: .3s;
 }
 
 header nav ul li a:hover {
     color: #83ebff;
-    text-shadow: 0 2.5px #191919;
-    text-decoration: underline;
+    text-shadow: 0 0 #191919;
+}
+
+header nav ul li a:not(.has-img)::after {
+    content: "";
+    display: block;
+    width: 0;
+    border-bottom: 2px solid #83ebff;
+    transition: .2s;
+}
+
+header nav ul li a:not(.has-img):hover::after {
+    content: "";
+    display: block;
+    width: 110%;
+    border-bottom: 2px solid #83ebff;
 }
 
 /* ▲ header ▲ */
