--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -85,29 +85,24 @@ footer {
 /* ▼ Twitter link ▼ */
 #twitter {
 	text-decoration: none;
-	color: white;
-	height: 64px;
-	width: 64px;
 	position: fixed;
 	right: 4vw;
-	bottom: 64px;
+	bottom: 32px;
 	display: none;
 }
 
-#twitter div svg {
-	opacity: .75;
-	transition: .37s;
-}
-
-#twitter div svg:hover {
-	color: #1da1f2;
-	opacity: 1;
-	transform: translateX(-6px) translateY(-6px) scale(1.2);
+#twitter div img {
+	width: 32px;
+	height: 32px;
+	color: white;
+	background-color: #1da1f2;
+	border-radius: 50%;
+	padding: 12px;
 }
 
 .show-twitter {
 	display: inline !important;
-	animation: show .8s;
+	animation: show .2s;
 }
 
 @keyframes show {
@@ -122,7 +117,7 @@ footer {
 
 /* ▲ Twitter link ▲ */
 
-/* ▼ Mail button ▼ */
+/* ▼ Contact modal ▼ */
 
 #contact-modal {
 	position: fixed;
@@ -186,10 +181,35 @@ footer {
 
 .show-contact-modal {
 	display: block;
+	animation: showModal .6s;
+}
+
+@keyframes showModal {
+	0% {
+		opacity: 0;
+		transform: translateY(32px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
 
 .hide-contact-modal {
 	display: none;
 }
 
-/* ▲ Mail button ▲ */
+@keyframes hideModal {
+	0% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+
+	100% {
+		opacity: 0;
+		transform: translateY(32px);
+	}
+}
+
+/* ▲ Contact modal ▲ */
