Improve:copyright / commentout Fix:fixed member list overflow Update:member_list.json Create:ryoma.png

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,3 +1,5 @@
+/* © 2022 Sarf Esports All rights reserved. */
+
 @import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap");
 
 html {
