Update:change sarf to revati

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-/* © 2022 Sarf Esports All rights reserved. */
+/* © 2022 REVATI */
 
 @import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap");
 
