--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -16,8 +16,8 @@ body {
 }
 
 ::selection {
-        color: #ff367f;
-	backgroud-color: #d1ff46;
+    background: #d1ff46;
+    color: black;
 }
 /* ▼ header ▼ */
 
