--- a/assets/stylesheets/util.css
+++ b/assets/stylesheets/util.css
@@ -42,3 +42,21 @@
         transform: translateX(0);
     }
 }
+
+.shake {
+    animation: shake .2s ease-in-out infinite;
+}
+
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+
+    50% {
+        transform: translateX(5px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
