Test:tmp color change

--- a/assets/stylesheets/util.css
+++ b/assets/stylesheets/util.css
@@ -2,7 +2,8 @@
 
 /* Background colorings */
 .bg-default {
-    background-color: #191919;
+    /* background-color: #191919; */
+    background-color: #000000;
 }
 
 /* Features */
