--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-	color: #f7f7f7;
+	color: #eeeeee;
 	text-align: center;
 	display: flex;
 	flex-direction: column;
@@ -124,7 +124,7 @@ header nav ul li a:hover::after {
 
 footer {
 	height: 24vh;
-	background-color: #111;
+	background-color: #0a0a0a;
 }
 
 .copyright {
