--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,10 +1,13 @@
 /* © 2022 REVATI */
 
-@import url(https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap);
+@font-face {
+	font-family: "Zen Kaku Gothic Antique";
+	src: url("../fonts/ZenKakuGothicAntique/ZenKakuGothicAntique-Regular.ttf");
+}
 
 @font-face {
-	font-family: "BebasNeue";
-	src: url("../fonts/Bebas_Neue/BebasNeue-Regular.ttf");
+	font-family: "Poppins";
+	src: url("../fonts/Poppins/Poppins-Regular.ttf");
 }
 
 html {
@@ -35,7 +38,9 @@ header {
 	width: 100%;
 	box-shadow: 0 0 10px 0 black;
 	border-bottom: 6px solid #65743b;
-	font-family: "BebasNeue", "Zen Kaku Gothic Antique", sans-serif;
+	font-family: "Poppins";
+	font-weight: 600;
+	letter-spacing: -1px;
 }
 
 header img {
@@ -67,7 +72,7 @@ header nav ul li:last-child {
 
 header nav ul li {
 	list-style: none;
-	margin: 10px 16px 2px 10px;
+	margin: 10px 12px 2px 10px;
 }
 
 header nav ul li a {
