--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,11 +1,11 @@
-/* © 2022 - 2023 REVATI */
+// © 2022 - 2023 REVATI
 
 ::selection {
 	background: #d1ff46;
 	color: black;
 }
 
-/* ▼ footer ▼ */
+// ▼ footer
 
 footer {
 	height: 24vh;
@@ -16,4 +16,4 @@ footer {
 	margin-top: 2em;
 }
 
-/* ▲ footer ▲ */
+// ▲ footer ▲
