--- a/assets/stylesheets/util.scss
+++ b/assets/stylesheets/util.scss
@@ -11,6 +11,34 @@
     user-select: none;
 }
 
+.shake {
+    animation: shake .2s ease-in-out infinite;
+}
+
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+
+    50% {
+        transform: translateX(5px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.invisible {
+    opacity: 0 !important;
+}
+
+/* Prevent scrolling */
+body.prevent-scroll {
+    height: 100vh;
+    overflow: hidden;
+}
+
 .fade-in-bottom {
     animation: fadeInDown 1.6s ease-out;
 }
