Impl:news slider counter animation

--- a/assets/stylesheets/news_slider.scss
+++ b/assets/stylesheets/news_slider.scss
@@ -135,7 +135,7 @@ h2 {
     font-weight:100;
     color: #949494;
 
-    span {
+    .split-line {
         margin: 0 1em;
         font-weight: 800;
         color: #e6e6e6;
