--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -30,45 +30,46 @@
             color: #3a490c;
             font-weight: 900;
 
-            >img {
-                width: 86px;
-                height: 86px;
-                border-radius: 50%;
-                margin: 20px auto;
-                border: 4px solid #c0c0c0;
-                pointer-events: none;
-                user-select: none;
-            }
+            div {
+                >img {
+                    width: 86px;
+                    height: 86px;
+                    border-radius: 50%;
+                    margin: 20px auto;
+                    border: 4px solid #c0c0c0;
+                    pointer-events: none;
+                    user-select: none;
+                }
 
-            h3 {
-                font-size: 18px;
-                margin-top: -16px;
-            }
+                h3 {
+                    font-size: 18px;
+                    margin-top: -16px;
+                }
 
-            .member-twitter img {
-                height: 26px;
-                transform: translateY(2px);
-            }
+                .member-twitter img {
+                    height: 26px;
+                    transform: translateY(2px);
+                }
 
-            .member-youtube img {
-                height: 24px;
-            }
+                .member-youtube img {
+                    height: 24px;
+                }
 
-            .member-twitch img {
-                height: 30px;
-                transform: translateY(4px);
-            }
+                .member-twitch img {
+                    height: 30px;
+                    transform: translateY(4px);
+                }
 
-            a {
-                text-decoration: none;
-                margin: 0 4px;
-            }
+                a {
+                    text-decoration: none;
+                    margin: 0 4px;
+                }
 
-            a img {
-                user-select: none;
+                a img {
+                    user-select: none;
+                }
             }
         }
-
     }
 }
 
@@ -78,7 +79,7 @@
         background-color: #b4e7d6 !important;
         border: 4px solid #318569 !important;
 
-        >img {
+        div>img {
             border: 4px solid #318569 !important;
         }
     }
