--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -4,31 +4,33 @@ li {
     list-style: none;
     margin: 10px 12px 2px 10px;
 
+
+    &:last-child {
+        margin-right: 2.6em;
+    }
+
     a {
         color: black;
         font-size: 28px;
         text-decoration: none;
         transition: 0.3s;
-    }
 
-    a:hover {
-        filter: drop-shadow(-3px -3px 0 #00000055);
-    }
 
-    a::after {
-        content: '';
-        display: block;
-        border-bottom: 2px solid #394907;
-        margin: 0 auto;
-        transform: scaleX(0);
-        transition: 0.2s;
-    }
+        &:hover {
+            filter: drop-shadow(-3px -3px 0 #00000055);
+        }
 
-    a:hover::after {
-        transform: scaleX(112%);
-    }
-}
+        &::after {
+            content: '';
+            display: block;
+            border-bottom: 2px solid #394907;
+            margin: 0 auto;
+            transform: scaleX(0);
+            transition: 0.2s;
+        }
 
-li:last-child {
-    margin-right: 2.6em;
+        &:hover::after {
+            transform: scaleX(112%);
+        }
+    }
 }
