--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -23,3 +23,18 @@ body {
 	background: #d1ff46;
 	color: black;
 }
+
+
+a {
+	color: #17d8d8;
+	text-decoration: underline;
+	transition: 0.2s;
+}
+
+a:hover {
+	color: #7effb4;
+}
+
+a:active {
+	color: #e6ff9a;
+}
