Fix:text size of about and news sectionin in mobile

--- a/assets/stylesheets/news_slider.scss
+++ b/assets/stylesheets/news_slider.scss
@@ -24,6 +24,10 @@ li {
         h1 {
             display: none;
         }
+
+        @include sp {
+            opacity: 0;
+        }
     }
 
     a {
@@ -42,7 +46,13 @@ li {
     }
 
     h1 {
-        font-size: 32px;
+        @include pc {
+            font-size: 32px;
+        }
+
+        @include sp {
+            font-size: 24px;
+        }
     }
 }
 
