Test:fuck mobile scroll🤬

--- a/assets/stylesheets/news_slider.scss
+++ b/assets/stylesheets/news_slider.scss
@@ -25,10 +25,9 @@ li {
             display: none;
         }
 
-        // DEBUG
-        // @include sp {
-        //     display: none;
-        // }
+        &.mobile {
+            display: none;
+        }
     }
 
     a {
