--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -5,11 +5,6 @@
 	src: url("../fonts/Zen_Kaku_Gothic_Antique/ZenKakuGothicAntique-Regular.ttf");
 }
 
-html,
-body {
-	overflow-x: hidden
-}
-
 html {
 	scroll-behavior: smooth;
 	font-family: "Zen Kaku Gothic Antique", sans-serif;
@@ -22,6 +17,7 @@ body {
 	flex-direction: column;
 	margin: 0;
 	background: #111111;
+	overflow-x: hidden;
 }
 
 ::selection {
