--- a/assets/stylesheets/news_slider.scss
+++ b/assets/stylesheets/news_slider.scss
@@ -1,11 +1,13 @@
 // © 2022 - 2023 REVATI
 
 ul {
+    height: 544px;
     list-style: none;
-    display: flex;
     padding: 0;
-    margin: 0 0 42px 0;
-    min-height: 50vh;
+
+    @media screen and (max-width: 817px) {
+        height: calc(48vw + 160px);
+    }
 }
 
 li {
