--- a/assets/stylesheets/reveal_anim.scss
+++ b/assets/stylesheets/reveal_anim.scss
@@ -9,73 +9,72 @@
 //     <p class="reveal-anim-item">I Ro Ha Ni Ho He To</p>
 // </div>
 // ```
-// 
+//
 // And add `reveal-anim-con-active` class to element with `reveal-anim-con` class to trigger animation.
 // also don't forget to add `reveal-anim-item-active` class to element with `reveal-anim-item` class to trigger animation.
-// 
+//
 // ## Dependencies
-// 
+//
 // - `@import '/assets/stylesheets/variables.scss';`
 
-
 .reveal-anim-con {
-    position: relative;
-    overflow: hidden;
+	position: relative;
+	overflow: hidden;
 }
 
-$reveal-anim-delay: .5s;
+$reveal-anim-delay: 0.5s;
 
 // All animations are completely finished after ($reveal-anim-duration*2) seconds
-$reveal-anim-duration: .3s;
+$reveal-anim-duration: 0.3s;
 
 $reveal-anim-first-point: polygon(0 0, 0 0, 0 100%, 0% 100%);
 $reveal-anim-middle-point: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 $reveal-anim-last-point: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 
 .reveal-anim-con-active::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: $primary-color;
-    clip-path: $reveal-anim-first-point;
-    animation: fadeInFromLeftTop $reveal-anim-duration forwards $reveal-anim-delay,
-        fadeOutToRight $reveal-anim-duration forwards $reveal-anim-duration + $reveal-anim-delay;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: $primary-color;
+	clip-path: $reveal-anim-first-point;
+	animation: fadeInFromLeftTop $reveal-anim-duration forwards $reveal-anim-delay,
+		fadeOutToRight $reveal-anim-duration forwards $reveal-anim-duration + $reveal-anim-delay;
 
-    // # USSR version ☭
-    // background-image: url(/images/news/20221126.png);
-    // background-repeat: no-repeat;
-    // background-position: top left;
-    // background-size: cover;
+	// # USSR version ☭
+	// background-image: url(/images/news/20221126.png);
+	// background-repeat: no-repeat;
+	// background-position: top left;
+	// background-size: cover;
 }
 
 @keyframes fadeInFromLeftTop {
-    0% {
-        clip-path: $reveal-anim-first-point;
-    }
+	0% {
+		clip-path: $reveal-anim-first-point;
+	}
 
-    100% {
-        clip-path: $reveal-anim-middle-point;
-    }
+	100% {
+		clip-path: $reveal-anim-middle-point;
+	}
 }
 
 @keyframes fadeOutToRight {
-    0% {
-        clip-path: $reveal-anim-middle-point;
-    }
+	0% {
+		clip-path: $reveal-anim-middle-point;
+	}
 
-    100% {
-        clip-path: $reveal-anim-last-point;
-    }
+	100% {
+		clip-path: $reveal-anim-last-point;
+	}
 }
 
 .reveal-anim-item {
-    opacity: 0;
+	opacity: 0;
 }
 
 .reveal-anim-item-active {
-    opacity: 1 !important;
-    transition-delay: $reveal-anim-duration + $reveal-anim-delay;
+	opacity: 1 !important;
+	transition-delay: $reveal-anim-duration + $reveal-anim-delay;
 }
