--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -19,6 +19,8 @@
 		margin: 0 auto;
 
 		li {
+			$text-color: #3a490c;
+
 			align-items: center;
 			margin: 8px 6px;
 			width: 138px;
@@ -27,7 +29,7 @@
 			list-style: none;
 			border-radius: 4px;
 			border: 4px solid #c0c0c0;
-			color: #3a490c;
+			color: $text-color;
 			font-weight: 900;
 
 			div {
@@ -44,6 +46,7 @@
 				h3 {
 					font-size: 18px;
 					margin-top: -16px;
+					margin-bottom: 9px;
 				}
 
 				.member-twitter img {
@@ -63,10 +66,19 @@
 				a {
 					text-decoration: none;
 					margin: 0 4px;
-				}
 
-				a img {
-					user-select: none;
+					img {
+						user-select: none;
+					}
+
+					svg {
+						color: $text-color;
+						transform: translateY(6px);
+					}
+
+					&.new-lined svg {
+						transform: translateY(0);
+					}
 				}
 			}
 		}
