🚚🔥 move SASS variables to `stylesheets/variables/`
- 🚚 Move: SASS color variables to `stylesheets/variables/_color.scss`
- 🚚 Move: SASS mixins to `stylesheets/variables/_mixin.scss`
- 🚚 Move: SASS dimension variable to `stylesheets/variables/_dimension.scss`
- 🔥 Delete: `stylesheets/varialbes.scss`
- 🔥 Delete: `stylesheets/mixins.scss`

--- a/assets/stylesheets/news_slider.scss
+++ b/assets/stylesheets/news_slider.scss
@@ -1,6 +1,6 @@
 // © 2022 - 2023 REVATI
 
-@use '/assets/stylesheets/mixins.scss' as *;
+@use '/assets/stylesheets/variables/mixin' as *;
 
 ul {
 	height: 544px;
