--- a/assets/stylesheets/reveal_anim.scss
+++ b/assets/stylesheets/reveal_anim.scss
@@ -13,7 +13,7 @@
 // And add `reveal-anim-con-active` class to element with `reveal-anim-con` class to trigger animation.
 // also don't forget to add `reveal-anim-item-active` class to element with `reveal-anim-item` class to trigger animation.
 
-@use './variables.scss' as *;
+@use './variables/color' as *;
 
 .reveal-anim-con {
 	position: relative;
