🎨 Improve: make square brackets pseudo-elements

--- a/assets/stylesheets/news_slider.scss
+++ b/assets/stylesheets/news_slider.scss
@@ -65,6 +65,14 @@ li {
 		position: relative;
 		top: -16px;
 		letter-spacing: 2px;
+
+		&::before {
+			content: '[ ';
+		}
+
+		&::after {
+			content: ' ]';
+		}
 	}
 }
 
