--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -1,5 +1,7 @@
 // © 2022 - 2024 REVATI
 
+@use '/assets/stylesheets/variables/color' as *;
+
 li {
 	list-style: none;
 	margin: 10px 12px 2px 10px;
@@ -15,13 +17,13 @@ li {
 		transition: 0.3s;
 
 		&:hover {
-			color: #62800b;
+			color: $primary-color-darker-2;
 		}
 
 		&::after {
 			content: '';
 			display: block;
-			border-bottom: 2px solid #394907;
+			border-bottom: 2px solid $primary-color-darker;
 			margin: 0 auto;
 			transform: scaleX(0);
 			transition: 0.2s;
