--- a/assets/stylesheets/variables/_color.scss
+++ b/assets/stylesheets/variables/_color.scss
@@ -1,4 +1,6 @@
 // © 2022 - 2024 REVATI
 
-$primary-color: #d1ff46;
+$primary-color: #154c83;
+$primary-color-darker: #0d2e51;
+$primary-color-darker-2: #021222;
 $secondary-color: #111111;
