--- a/assets/stylesheets/variables/_color.scss
+++ b/assets/stylesheets/variables/_color.scss
@@ -4,4 +4,5 @@ $primary-color: #154c83;
 $primary-color-darker: #0d2e51;
 $primary-color-darker-2: #021222;
 $primary-color-pale: #98c0e7;
+$primary-color-pale-darker: #375d81;
 $secondary-color: #111111;
