--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -5,7 +5,7 @@
 
 li {
 	list-style: none;
-	margin: 1px 12px 3px 10px;
+	margin: 10px 12px 2px 10px;
 
 	&:last-child {
 		margin-right: 2.6em;
@@ -35,8 +35,12 @@ li {
 		&:hover::after {
 			transform: scaleX(112%);
 		}
+	}
 
-		@include low-height {
+	@include low-height {
+		margin: 1px 12px 3px 10px;
+
+		a {
 			font-size: 23px;
 		}
 	}
