🩹 Fix: flip animation did not work [#55]

--- a/assets/stylesheets/news_slider.scss
+++ b/assets/stylesheets/news_slider.scss
@@ -84,7 +84,7 @@ li {
 	z-index: 1;
 
 	img {
-		max-height: 376.5px;
+		height: 376.5px;
 		object-fit: contain;
 		width: 100%;
 		transition: 0.4s ease-out;
