--- a/assets/stylesheets/article-body.scss
+++ b/assets/stylesheets/article-body.scss
@@ -1,6 +1,7 @@
 // © 2022 REVATI
 
 @use '/assets/stylesheets/variables/color' as *;
+@use '/assets/stylesheets/variables/mixin' as *;
 
 .article-body {
 	max-width: 512px;
@@ -10,6 +11,10 @@
 	font-size: 19px;
 	letter-spacing: 1.2px;
 
+	p {
+		margin: 1.25em 0;
+	}
+
 	h1,
 	h2,
 	h3,
@@ -18,6 +23,7 @@
 	h6 {
 		font-weight: 900;
 		letter-spacing: 1.2px;
+		text-wrap: balance;
 	}
 
 	h1 {
@@ -49,19 +55,20 @@
 	}
 
 	blockquote {
-		margin: 0;
-		border-left: 4px solid #808080;
-		padding-left: 20px;
-		border-radius: 2px;
+		margin: 0.8em 0;
+		padding: 1px 20px;
+		border-left: 5px solid #808080;
+		border-radius: 4px;
 	}
 
 	code {
 		background-color: #0c0c0c;
 		padding: 6px;
 		font-size: 16px;
-		border-radius: 4px;
+		border-radius: 3px;
 		font-family: monospace;
-		color: #ffedc7;
+		color: #fffcf5;
+		word-break: break-all;
 	}
 
 	pre code {
@@ -73,16 +80,32 @@
 	}
 
 	table {
-		margin: 12px auto;
-		border: 2px solid #2b2b2b;
+		$border: 1px solid #2b2b2b;
+		margin: 24px 0;
+		border: $border;
 		border-radius: 2px;
 		background-color: #2b2b2b;
-		overflow: hidden;
+		font-size: 16px;
+		border-collapse: collapse;
+		overflow-x: scroll;
+		word-break: break-all;
+
+		@include sp {
+			display: block;
+			font-size: 14px;
+			white-space: nowrap;
+		}
 
 		th,
 		td {
-			padding: 6px 8px;
-			border: 1px solid #2b2b2b;
+			max-width: 383px;
+			padding: 8px 10px;
+			border: $border;
+
+			@include sp {
+				max-width: initial;
+				width: 100vw;
+			}
 		}
 
 		th {
