--- a/assets/stylesheets/article-body.scss
+++ b/assets/stylesheets/article-body.scss
@@ -159,5 +159,29 @@
 
 	@include sp {
 		font-size: 18px;
+
+		h1 {
+			font-size: 26px;
+		}
+	
+		h2 {
+			font-size: 23px;
+		}
+	
+		h3 {
+			font-size: 20px;
+		}
+	
+		h4 {
+			font-size: 18px;
+		}
+	
+		h5 {
+			font-size: 16px;
+		}
+	
+		h6 {
+			font-size: 14px;
+		}
 	}
 }
