--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -2,10 +2,34 @@
 
 @use '/assets/stylesheets/variables/color' as *;
 
+.div-list,
 #team-list {
 	list-style: none;
 	padding-left: 0;
+}
 
+.div-list {
+	display: inline-block;
+	margin: 0 auto;
+	padding: 8px 30px;
+	$border: 3px solid #ffffff4a;
+	border-top: $border;
+	border-bottom: $border;
+
+	li {
+		margin: 4px auto;
+
+		a {
+			font-family: 'Poppins', sans-serif;
+			font-size: 22px;
+			font-weight: 100;
+			text-decoration: none;
+			letter-spacing: 1px;
+		}
+	}
+}
+
+#team-list {
 	h2 {
 		text-align: left;
 		font-size: 28px;
