✨ Impl: header item highlight of current sections and pages

--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -32,8 +32,14 @@ li {
 			transition: 0.2s;
 		}
 
-		&:hover::after {
-			transform: scaleX(112%);
+		&:hover, &.active {
+			&::after {
+				transform: scaleX(112%);
+
+				@include sp {
+					transform: scaleX(0);
+				}
+			}
 		}
 	}
 
