--- a/assets/stylesheets/news/news_list.scss
+++ b/assets/stylesheets/news/news_list.scss
@@ -44,6 +44,8 @@
 	display: flex;
 	flex-wrap: wrap;
 	padding: 0;
+	margin-top: -10px;
+	margin-bottom: 4px;
 	height: 630px;
 	overflow: hidden;
 }
